# project-adaptation-experiments

./: .gitignore  README.md  garbage.py  pyproject.toml
archive/rag_experiments/: chunkers.py  config_plcc.yaml  from_file_context_composer.py  inference.py  process_olga_results.py  process_optimal_contexts.py  score_chunk_context_composer.py  score_file_context_composer.py
archive/replug/: data_loading.py
rag/: bug_localization.py  bug_localization_orig.py  data_loading.py  eval_plcc.py  eval_plcc_on_rag.py  gpu_distributor.py  try_hydra.py  visualization.py
rag/bug_localization/: README.md  bpe_tokenizer.py  cosine_distance_ranker.py  ds_features.py  evaluator.py  hf_data_source.py  load_data.py  process_bug_loc.py  process_bug_loc_dataset.py  tfidf_backbone.py
rag/configs/: bug_localization.yaml  config.yaml  config_plcc.yaml  exclusion.py  get_info_dict.py  plcc.yaml  plcc_old.yaml  rag.yaml  sweep.yaml
rag/context_composers/: draco_context_composer.py  from_file_context_composer.py  get_composer.py  multi_composer.py  score_chunk_context_composer.py
rag_experiments/: add_hash_to_raw.py  chunkers.py  config_plcc.yaml  data_loading.py  eval_on_rag.py  from_file_context_composer.py  inference.py  iou_chunk_rag.py  iou_chunk_scorer.py  kl_rag.py  process_olga_results.py  process_optimal_contexts.py  prompts_creation.py  rag_config.yaml  score_chunk_context_composer.py  score_context_composer.py  score_file_context_composer.py  scorers.py  splitters.py  synch_with_evgeniy.py  vllm_synt_test.py
replug/: data_loading.py  inference.py  model.py
(+27 files in other folders)
